--- a/pipeline/01c_ingest_bronze_leaderboard_apyflux.py.ipynb
+++ b/pipeline/01c_ingest_bronze_leaderboard_apyflux.py.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "# Databricks Notebook: Bronze ingest from Apyflux Binance Futures Leaderboard (positions)\n",
-    "# self-contained (no bronze_ingest_utils import)\n",
+    "# Multi-account version (supports multiple encryptedUid → labeled as account_label)\n",
     "\n",
     "import json, time, datetime as dt, hashlib\n",
     "from typing import Dict, List, Tuple\n",
@@ -38,24 +38,36 @@
     "MODE  = \"once\"          # once | poll | forever\n",
     "POLL_SECONDS = 60\n",
     "MAX_POLLS    = 120\n",
-    "UPSERT_UPDATE_INGEST_TIME = True   # True면 매 업서트마다 ingest_time 최신화\n",
+    "UPSERT_UPDATE_INGEST_TIME = True\n",
     "\n",
-    "# ⚠️ 유니티 카탈로그 미사용 환경이면 CATALOG를 'hive_metastore'로 변경하세요.\n",
     "CATALOG = \"demo_catalog\"\n",
     "SCHEMA  = \"demo_schema\"\n",
     "TABLE   = f\"{CATALOG}.{SCHEMA}.bronze_futures_leaderboard_positions\"\n",
     "\n",
+    "# 차트/캔들 조인 시 사용할 실버 테이블 명(필요 시 환경에 맞게 수정)\n",
+    "SILVER_CHARTS = f\"{CATALOG}.{SCHEMA}.silver_charts\"\n",
+    "\n",
     "BASE_URL       = \"https://gateway.apyflux.com\"\n",
     "PATH_POS       = \"/v1/getOtherPosition\"\n",
-    "ENCRYPTED_UID  = \"14EA12E7412DC5A21DFF5E7EAC6013B9\"\n",
     "\n",
-    "# Databricks Secrets 사용 (scope/key 이름은 본인 환경에 맞게)\n",
+    "# ▶ 여러 계정(UID → 라벨): 대시보드 필터를 위해 라벨로도 저장\n",
+    "ENCRYPTED_UIDS: Dict[str, str] = {\n",
+    "    \"14EA12E7412DC5A21DFF5E7EAC6013B9\": \"ILLIT\",\n",
+    "    \"38AF58C71A07AC6BDA18B8D97E7C3B00\": \"Geruntis\",\n",
+    "    \"1A7A15511721C96C03D029D4BA0AA64F\": \"Anonymous_A\",\n",
+    "    \"8E3794B912C699234158A15D3C9B9610\": \"Anonymous_B\",\n",
+    "}\n",
+    "\n",
+    "# Databricks Secrets\n",
     "HEADERS = {\n",
     "    \"x-app-id\":    dbutils.secrets.get(\"apyflux\", \"x_app_id\"),\n",
     "    \"x-client-id\": dbutils.secrets.get(\"apyflux\", \"x_client_id\"),\n",
     "    \"x-api-key\":   dbutils.secrets.get(\"apyflux\", \"x_api_key\"),\n",
     "    \"Content-Type\":\"application/json\",\n",
     "}\n",
+    "\n",
+    "# 스키마 자동 병합: 새 컬럼 추가 시 안전\n",
+    "spark.conf.set(\"spark.databricks.delta.schema.autoMerge.enabled\", \"true\")\n",
     "\n",
     "# =========================\n",
     "# (B) 테이블 준비\n",
@@ -68,6 +80,7 @@
     "  source            STRING,     -- \"apyflux.binance.futures.leaderboard\"\n",
     "  endpoint_name     STRING,     -- \"getOtherPosition\"\n",
     "  uid               STRING,     -- encryptedUid\n",
+    "  account_label     STRING,     -- 계정 식별/필터용 라벨\n",
     "  symbol            STRING,     -- 포지션 심볼\n",
     "  entryPrice        DOUBLE,\n",
     "  markPrice         DOUBLE,\n",
@@ -80,7 +93,7 @@
     "  update_ts         LONG,       -- 이벤트 시각(ms)\n",
     "  event_time        TIMESTAMP,  -- update_ts 기반\n",
     "  ingest_time       TIMESTAMP,  -- 적재 시각\n",
-    "  unique_key        STRING,     -- \"pos|{{uid}}|{{symbol}}|{{update_ts}}\"\n",
+    "  unique_key        STRING,\n",
     "  raw_json          STRING,     -- 원본 JSON\n",
     "  api_endpoint      STRING,     -- 호출 경로\n",
     "  api_params_hash   STRING,     -- 요청 파라미터 해시\n",
@@ -116,8 +129,8 @@
     "    ut = item.get(\"updateTime\")\n",
     "    if isinstance(ut, list) and len(ut) >= 6:\n",
     "        Y, M, D, h, m, s = [int(x) for x in ut[:6]]\n",
-    "        ns = int(ut[6]) if len(ut) >= 7 else 0  # 나노초\n",
-    "        ms_part = ns / 1_000_000                  # ns → ms\n",
+    "        ns = int(ut[6]) if len(ut) >= 7 else 0\n",
+    "        ms_part = ns / 1_000_000\n",
     "        dt_utc = dt.datetime(Y, M, D, h, m, s, int(ms_part * 1000), tzinfo=dt.timezone.utc)\n",
     "        return _to_ms(dt_utc)\n",
     "\n",
@@ -134,10 +147,10 @@
     "    rows = data.get(\"otherPositionRetList\", []) or []\n",
     "    return rows, dict(r.headers), params, PATH_POS\n",
     "\n",
-    "def _rows_to_bronze(enc_uid: str, rows: List[Dict], endpoint: str, params: Dict) -> int:\n",
-    "    \"\"\"positions rows(list[dict]) → Bronze Delta UPSERT(idempotent)\"\"\"\n",
+    "def _rows_to_bronze(enc_uid: str, account_label: str, rows: List[Dict], endpoint: str, params: Dict) -> int:\n",
+    "    \"\"\"positions rows(list[dict]) → Bronze Delta UPSERT(idempotent) for one account\"\"\"\n",
     "    if not rows:\n",
-    "        print(\"[INFO] no rows returned\")\n",
+    "        print(f\"[INFO] no rows returned for uid={enc_uid}\")\n",
     "        return 0\n",
     "\n",
     "    now = dt.datetime.now(dt.timezone.utc)\n",
@@ -155,6 +168,7 @@
     "            \"source\":          \"apyflux.binance.futures.leaderboard\",\n",
     "            \"endpoint_name\":   \"getOtherPosition\",\n",
     "            \"uid\":             enc_uid,\n",
+    "            \"account_label\":   account_label,\n",
     "            \"symbol\":          sym,\n",
     "            \"entryPrice\":      float(item[\"entryPrice\"]) if item.get(\"entryPrice\") is not None else None,\n",
     "            \"markPrice\":       float(item[\"markPrice\"])  if item.get(\"markPrice\")  is not None else None,\n",
@@ -178,6 +192,7 @@
     "        StructField(\"source\",          StringType(), True),\n",
     "        StructField(\"endpoint_name\",   StringType(), True),\n",
     "        StructField(\"uid\",             StringType(), True),\n",
+    "        StructField(\"account_label\",   StringType(), True),\n",
     "        StructField(\"symbol\",          StringType(), True),\n",
     "        StructField(\"entryPrice\",      DoubleType(), True),\n",
     "        StructField(\"markPrice\",       DoubleType(), True),\n",
@@ -204,12 +219,12 @@
     "            .dropDuplicates([\"unique_key\"])\n",
     "         )\n",
     "\n",
-    "    # Delta MERGE (unique_key + dt) — ingest_time 갱신 정책 반영\n",
     "    delta_table = DeltaTable.forName(spark, TABLE)\n",
     "    set_map = {\n",
     "        \"source\":          \"s.source\",\n",
     "        \"endpoint_name\":   \"s.endpoint_name\",\n",
     "        \"uid\":             \"s.uid\",\n",
+    "        \"account_label\":   \"s.account_label\",\n",
     "        \"symbol\":          \"s.symbol\",\n",
     "        \"entryPrice\":      \"s.entryPrice\",\n",
     "        \"markPrice\":       \"s.markPrice\",\n",
@@ -226,7 +241,6 @@
     "        \"api_params_hash\": \"s.api_params_hash\",\n",
     "        \"dt\":              \"s.dt\",\n",
     "    }\n",
-    "    # ingest_time 갱신 정책\n",
     "    set_map[\"ingest_time\"] = \"s.ingest_time\" if UPSERT_UPDATE_INGEST_TIME else \"t.ingest_time\"\n",
     "\n",
     "    (delta_table.alias(\"t\")\n",
@@ -237,55 +251,48 @@
     "\n",
     "    return df.count()\n",
     "\n",
-    "def ingest_once(enc_uid: str) -> int:\n",
+    "def ingest_for_account(enc_uid: str, label: str) -> int:\n",
     "    rows, headers, params, ep = _fetch_positions(enc_uid)\n",
-    "    cnt = _rows_to_bronze(enc_uid, rows, ep, params)\n",
-    "    # (옵션) 레이트/쿼터 로깅\n",
+    "    cnt = _rows_to_bronze(enc_uid, label, rows, ep, params)\n",
     "    rem = headers.get(\"X-RateLimit-Remaining\") or headers.get(\"x-ratelimit-remaining\")\n",
     "    if rem is not None:\n",
-    "        print(f\"[Apyflux] remaining: {rem}\")\n",
-    "    print(f\"[Bronze LB] +{cnt} rows (uid={enc_uid})\")\n",
+    "        print(f\"[Apyflux] remaining: {rem} (uid={enc_uid})\")\n",
+    "    print(f\"[Bronze LB] +{cnt} rows (uid={enc_uid}, label={label})\")\n",
     "    return cnt\n",
+    "\n",
+    "def ingest_many(uid_map: Dict[str, str]) -> int:\n",
+    "    total = 0\n",
+    "    for uid, label in uid_map.items():\n",
+    "        try:\n",
+    "            total += ingest_for_account(uid, label)\n",
+    "        except Exception as e:\n",
+    "            print(f\"[WARN] uid={uid} ({label}) failed: {e}\")\n",
+    "            time.sleep(2)\n",
+    "    return total\n",
     "\n",
     "# =========================\n",
     "# (D) MAIN\n",
     "# =========================\n",
     "if MODE == \"once\":\n",
-    "    ingest_once(ENCRYPTED_UID)\n",
+    "    ingest_many(ENCRYPTED_UIDS)\n",
     "    dbutils.notebook.exit(\"leaderboard positions once done\")\n",
     "\n",
     "elif MODE == \"poll\":\n",
     "    for _ in range(MAX_POLLS):\n",
-    "        ingest_once(ENCRYPTED_UID)\n",
+    "        ingest_many(ENCRYPTED_UIDS)\n",
     "        time.sleep(POLL_SECONDS)\n",
     "    dbutils.notebook.exit(\"leaderboard positions poll done\")\n",
     "\n",
     "else:  # forever\n",
-    "    print(f\"[LIVE] polling every {POLL_SECONDS}s for uid={ENCRYPTED_UID}\")\n",
+    "    print(f\"[LIVE] polling every {POLL_SECONDS}s for {len(ENCRYPTED_UIDS)} accounts\")\n",
     "    while True:\n",
     "        try:\n",
-    "            ingest_once(ENCRYPTED_UID)\n",
+    "            ingest_many(ENCRYPTED_UIDS)\n",
     "        except Exception as exc:\n",
     "            print(f\"[WARN] {exc}\")\n",
     "            time.sleep(5)\n",
     "        time.sleep(POLL_SECONDS)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "1aa6b58d-e738-470f-99af-82d01fe92454",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -299,6 +306,12 @@
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
+    "mostRecentlyExecutedCommandWithImplicitDF": {
+     "commandId": 7965387922038003,
+     "dataframes": [
+      "_sqldf"
+     ]
+    },
     "pythonIndentUnit": 4
    },
    "notebookName": "01c_ingest_bronze_leaderboard_apyflux.py",
