--- a/pipeline/02a_transform_silver_binance.py.ipynb
+++ b/pipeline/02a_transform_silver_binance.py.ipynb
@@ -18,25 +18,19 @@
    },
    "outputs": [],
    "source": [
-    "# Databricks Notebook: Transform Bronze (Binance) -> Silver (improved)\n",
-    "from pyspark.sql.functions import col, from_json, split\n",
+    "# Databricks Notebook: Transform Bronze (Binance) -> Silver (improved, 4h-focused)\n",
+    "from pyspark.sql.functions import col, from_json, split, coalesce, to_date\n",
     "from pyspark.sql.types import ArrayType, StringType\n",
     "from delta.tables import DeltaTable\n",
     "\n",
-    "# ===== (0) 선택: 최근 N일만 증분 처리 =====\n",
-    "DAYS_BACK = 14  # 전체 처리하려면 None\n",
+    "spark.sql(\"SET spark.sql.session.timeZone=UTC\")  # 경계 정합\n",
     "\n",
-    "# =========================\n",
-    "# (A) 환경/대상 테이블 설정\n",
-    "# =========================\n",
+    "DAYS_BACK = 14\n",
     "CATALOG = \"demo_catalog\"\n",
     "SCHEMA  = \"demo_schema\"\n",
     "BRONZE  = f\"{CATALOG}.{SCHEMA}.bronze_charts\"\n",
     "SILVER  = f\"{CATALOG}.{SCHEMA}.silver_charts\"\n",
     "\n",
-    "# =========================\n",
-    "# (B) Silver 테이블 생성(없으면)\n",
-    "# =========================\n",
     "spark.sql(f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SILVER} (\n",
     "  symbol       STRING,\n",
@@ -54,42 +48,39 @@
     "PARTITIONED BY (dt)\n",
     "\"\"\")\n",
     "\n",
-    "# =========================\n",
-    "# (C) Bronze 로드(필요 시 최근 N일만)\n",
-    "# =========================\n",
     "bronze = spark.table(BRONZE)\n",
     "if DAYS_BACK is not None:\n",
     "    bronze = bronze.where(f\"dt >= date_sub(current_date(), {DAYS_BACK})\")\n",
     "\n",
-    "# kline 배열: [0]=open_time(ms), [1]=open, [2]=high, [3]=low, [4]=close, [5]=volume, ...\n",
-    "arr = from_json(col(\"raw_json\"), ArrayType(StringType()))\n",
-    "uk  = split(col(\"unique_key\"), \"\\\\|\")  # \"symbol|interval|open_ms\"\n",
+    "# 4시간봉만 사용한다면 초기에 필터\n",
+    "bronze = bronze.where(\"interval = '4h' OR unique_key LIKE '%|4h|%'\")\n",
     "\n",
-    "# =========================\n",
-    "# (D) 변환 DF 구성\n",
-    "# =========================\n",
+    "arr = from_json(col(\"raw_json\"), ArrayType(StringType()))\n",
+    "uk  = split(col(\"unique_key\"), \"\\\\|\")\n",
+    "\n",
     "silver_df = (\n",
     "    bronze\n",
-    "      .withColumn(\"symbol\",     uk.getItem(0))\n",
-    "      .withColumn(\"interval\",   uk.getItem(1))\n",
+    "      # 브론즈에 컬럼이 있으면 우선 사용, 없으면 uk에서 보완\n",
+    "      .withColumn(\"symbol_eff\",   coalesce(col(\"symbol\"),   uk.getItem(0)))\n",
+    "      .withColumn(\"interval_eff\", coalesce(col(\"interval\"), uk.getItem(1)))\n",
     "      .withColumn(\"open_time\",  (arr.getItem(0).cast(\"long\")/1000).cast(\"timestamp\"))\n",
     "      .withColumn(\"open\",       arr.getItem(1).cast(\"double\"))\n",
     "      .withColumn(\"high\",       arr.getItem(2).cast(\"double\"))\n",
     "      .withColumn(\"low\",        arr.getItem(3).cast(\"double\"))\n",
     "      .withColumn(\"close\",      arr.getItem(4).cast(\"double\"))\n",
     "      .withColumn(\"volume\",     arr.getItem(5).cast(\"double\"))\n",
-    "      .withColumn(\"dt\",         col(\"event_time\").cast(\"date\"))\n",
-    "      .select(\"symbol\",\"interval\",\"open_time\",\"open\",\"high\",\"low\",\"close\",\"volume\",\n",
-    "              \"unique_key\",\"event_time\",\"dt\")\n",
+    "      .withColumn(\"dt\",         to_date(col(\"open_time\")))             # open_time 기준으로 통일\n",
+    "      .selectExpr(\n",
+    "          \"symbol_eff as symbol\",\n",
+    "          \"interval_eff as interval\",\n",
+    "          \"open_time\",\"open\",\"high\",\"low\",\"close\",\"volume\",\n",
+    "          \"unique_key\",\"event_time\",\"dt\"\n",
+    "      )\n",
     "      .dropDuplicates([\"unique_key\"])\n",
-    "      .repartition(\"dt\")   # 파티션별로 묶어 MERGE 부담↓ (필요시)\n",
+    "      .repartition(\"dt\")\n",
     ")\n",
     "\n",
-    "# =========================\n",
-    "# (E) Delta MERGE (idempotent upsert)\n",
-    "# =========================\n",
     "target = DeltaTable.forName(spark, SILVER)\n",
-    "\n",
     "(target.alias(\"t\")\n",
     "  .merge(\n",
     "    silver_df.alias(\"s\"),\n",
@@ -110,7 +101,7 @@
     "  .whenNotMatchedInsertAll()\n",
     "  .execute())\n",
     "\n",
-    "print(f\"Silver transform complete: upserted into {SILVER}\")\n"
+    "print(f\"[SILVER] upsert complete: {SILVER}\")\n"
    ]
   }
  ],
