--- a/pipeline/02b_transform_silver_fear_greed.py.ipynb
+++ b/pipeline/02b_transform_silver_fear_greed.py.ipynb
@@ -18,80 +18,57 @@
    },
    "outputs": [],
    "source": [
-    "# Databricks Notebook: Transform Bronze (Fear & Greed) -> Silver\n",
-    "# Binance용과 동일한 패턴: 최근 N일 증분 + unique_key 기준 MERGE\n",
-    "\n",
-    "from pyspark.sql.functions import col\n",
+    "# Databricks Notebook: Transform Bronze (FNG) -> Silver (fixed w/ ts_unix)\n",
+    "from pyspark.sql import functions as F\n",
     "from delta.tables import DeltaTable\n",
     "\n",
-    "# ===== (0) 선택: 최근 N일만 증분 처리 =====\n",
-    "DAYS_BACK = 60  # FNG는 일 1회 수준이라 넉넉히\n",
+    "spark.sql(\"SET spark.sql.session.timeZone=UTC\")\n",
+    "spark.conf.set(\"spark.databricks.delta.schema.autoMerge.enabled\", \"true\")\n",
     "\n",
-    "# =========================\n",
-    "# (A) 환경/대상 테이블 설정\n",
-    "# =========================\n",
     "CATALOG = \"demo_catalog\"\n",
     "SCHEMA  = \"demo_schema\"\n",
     "BRONZE  = f\"{CATALOG}.{SCHEMA}.bronze_fear_greed\"\n",
     "SILVER  = f\"{CATALOG}.{SCHEMA}.silver_fear_greed\"\n",
     "\n",
-    "# =========================\n",
-    "# (B) Silver 테이블 생성(없으면)\n",
-    "# =========================\n",
+    "# Silver 스키마(호환용으로 ts_unix 포함)\n",
     "spark.sql(f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SILVER} (\n",
-    "  event_time           TIMESTAMP,\n",
-    "  index_value          INT,\n",
-    "  value_classification STRING,\n",
-    "  time_until_update    STRING,\n",
-    "  unique_key           STRING,   -- \"fear_greed|<unix_ts>\"\n",
-    "  dt                   DATE\n",
+    "  ts_unix              BIGINT,      -- event_time(초) 파생\n",
+    "  event_time           TIMESTAMP,   -- 원본 UTC 시각\n",
+    "  dt                   DATE,        -- 파티션\n",
+    "  index_value          INT,         -- 0~100\n",
+    "  value_classification STRING,      -- \"Extreme Fear\" ~ \"Extreme Greed\"\n",
+    "  time_until_update    STRING,      -- API 텍스트\n",
+    "  unique_key           STRING       -- 'fear_greed|<unix_ts>'\n",
     ") USING DELTA\n",
     "PARTITIONED BY (dt)\n",
     "\"\"\")\n",
     "\n",
-    "# =========================\n",
-    "# (C) Bronze 로드(증분 범위 선택) -> 정형 DF\n",
-    "# =========================\n",
-    "bronze = spark.table(BRONZE)\n",
-    "if DAYS_BACK is not None:\n",
-    "    bronze = bronze.where(f\"dt >= date_sub(current_date(), {DAYS_BACK})\")\n",
+    "src = spark.table(BRONZE)\n",
     "\n",
     "silver_df = (\n",
-    "    bronze\n",
-    "      .select(\n",
-    "          col(\"event_time\").alias(\"event_time\"),\n",
-    "          col(\"index_value\").cast(\"int\").alias(\"index_value\"),\n",
-    "          col(\"value_classification\").alias(\"value_classification\"),\n",
-    "          col(\"time_until_update\").alias(\"time_until_update\"),\n",
-    "          col(\"unique_key\").alias(\"unique_key\"),\n",
-    "          col(\"dt\").cast(\"date\").alias(\"dt\"),\n",
-    "      )\n",
-    "      .dropDuplicates([\"unique_key\"])\n",
-    "      .repartition(\"dt\")  # 선택: 파티션별 MERGE 최적화\n",
+    "  src.select(\n",
+    "      F.col(\"event_time\").cast(\"timestamp\").alias(\"event_time\"),\n",
+    "      F.col(\"dt\").cast(\"date\").alias(\"dt\"),\n",
+    "      F.col(\"index_value\").cast(\"int\").alias(\"index_value\"),\n",
+    "      F.col(\"value_classification\").alias(\"value_classification\"),\n",
+    "      F.col(\"time_until_update\").alias(\"time_until_update\"),\n",
+    "      F.col(\"unique_key\").alias(\"unique_key\")\n",
+    "  )\n",
+    "  .withColumn(\"ts_unix\", F.unix_timestamp(\"event_time\").cast(\"long\"))\n",
+    "  .dropDuplicates([\"unique_key\"])\n",
+    "  .repartition(\"dt\")\n",
     ")\n",
     "\n",
-    "# =========================\n",
-    "# (D) Delta MERGE (idempotent upsert)\n",
-    "# =========================\n",
-    "target = DeltaTable.forName(spark, SILVER)\n",
+    "t = DeltaTable.forName(spark, SILVER)\n",
+    "# updateAll을 써도 s에 ts_unix가 있으므로 안전\n",
+    "(t.alias(\"t\")\n",
+    " .merge(silver_df.alias(\"s\"), \"t.unique_key = s.unique_key AND t.dt = s.dt\")\n",
+    " .whenMatchedUpdateAll()\n",
+    " .whenNotMatchedInsertAll()\n",
+    " .execute())\n",
     "\n",
-    "(target.alias(\"t\")\n",
-    "  .merge(\n",
-    "    silver_df.alias(\"s\"),\n",
-    "    \"t.unique_key = s.unique_key AND t.dt = s.dt\"\n",
-    "  )\n",
-    "  .whenMatchedUpdate(set={\n",
-    "      \"event_time\":           \"s.event_time\",\n",
-    "      \"index_value\":          \"s.index_value\",\n",
-    "      \"value_classification\": \"s.value_classification\",\n",
-    "      \"time_until_update\":    \"s.time_until_update\",\n",
-    "      \"dt\":                   \"s.dt\"\n",
-    "  })\n",
-    "  .whenNotMatchedInsertAll()\n",
-    "  .execute())\n",
-    "\n",
-    "print(f\"Silver FNG transform complete: upserted into {SILVER}\")\n"
+    "print(f\"[FNG SILVER] upsert complete -> {SILVER}\")\n"
    ]
   }
  ],
