--- a/pipeline/02c_transform_silver_leaderboard.ipynb
+++ b/pipeline/02c_transform_silver_leaderboard.ipynb
@@ -18,7 +18,7 @@
    },
    "outputs": [],
    "source": [
-    "# Databricks Notebook: Transform Bronze (Futures Leaderboard Positions) -> Silver\n",
+    "# Databricks Notebook: Transform Bronze (Futures Leaderboard Positions) -> Silver (with meta cols)\n",
     "from pyspark.sql.functions import col\n",
     "from delta.tables import DeltaTable\n",
     "\n",
@@ -27,61 +27,78 @@
     "BRONZE  = f\"{CATALOG}.{SCHEMA}.bronze_futures_leaderboard_positions\"\n",
     "SILVER  = f\"{CATALOG}.{SCHEMA}.silver_futures_positions\"\n",
     "\n",
-    "# =========================\n",
-    "# (A) Silver 테이블 생성\n",
-    "# =========================\n",
+    "# =================================\n",
+    "# (A) Silver 테이블 생성(메타 컬럼 포함)\n",
+    "# =================================\n",
     "spark.sql(f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SILVER} (\n",
+    "  source        STRING,\n",
+    "  endpoint_name STRING,\n",
+    "  account_label STRING,\n",
     "  uid        STRING,\n",
     "  symbol     STRING,\n",
+    "  unique_key STRING,\n",
     "  entryPrice DOUBLE,\n",
     "  markPrice  DOUBLE,\n",
     "  pnl        DOUBLE,\n",
     "  roe        DOUBLE,\n",
     "  amount     DOUBLE,\n",
     "  leverage   DOUBLE,\n",
-    "  event_time TIMESTAMP,\n",
+    "  yellow     BOOLEAN,\n",
+    "  tradeBefore BOOLEAN,\n",
+    "  update_ts  BIGINT,\n",
+    "  event_time  TIMESTAMP,\n",
     "  ingest_time TIMESTAMP,\n",
-    "  unique_key STRING,\n",
-    "  dt         DATE\n",
+    "  dt          DATE\n",
     ") USING DELTA\n",
     "PARTITIONED BY (dt)\n",
     "\"\"\")\n",
     "\n",
-    "# =========================\n",
-    "# (B) Bronze 로드 & 변환\n",
-    "# =========================\n",
+    "# =================================\n",
+    "# (B) Bronze 로드 & 컬럼 셀렉트/정제\n",
+    "# =================================\n",
     "bronze = spark.table(BRONZE)\n",
     "\n",
     "silver_df = (\n",
-    "    bronze\n",
-    "      .select(\n",
+    "    bronze.select(\n",
+    "        col(\"source\"),\n",
+    "        col(\"endpoint_name\"),\n",
+    "        col(\"account_label\"),\n",
     "        col(\"uid\"),\n",
     "        col(\"symbol\"),\n",
-    "        col(\"entryPrice\"),\n",
-    "        col(\"markPrice\"),\n",
-    "        col(\"pnl\"),\n",
-    "        col(\"roe\"),\n",
-    "        col(\"amount\"),\n",
-    "        col(\"leverage\"),\n",
-    "        col(\"event_time\"),\n",
-    "        col(\"ingest_time\"),\n",
     "        col(\"unique_key\"),\n",
-    "        col(\"dt\")\n",
-    "      )\n",
-    "      .dropDuplicates([\"unique_key\"])\n",
-    "      .repartition(\"dt\")\n",
+    "        col(\"entryPrice\").cast(\"double\"),\n",
+    "        col(\"markPrice\").cast(\"double\"),\n",
+    "        col(\"pnl\").cast(\"double\"),\n",
+    "        col(\"roe\").cast(\"double\"),\n",
+    "        col(\"amount\").cast(\"double\"),\n",
+    "        col(\"leverage\").cast(\"double\"),\n",
+    "        col(\"yellow\").cast(\"boolean\"),\n",
+    "        col(\"tradeBefore\").cast(\"boolean\"),\n",
+    "        col(\"update_ts\").cast(\"long\"),\n",
+    "        col(\"event_time\").cast(\"timestamp\"),\n",
+    "        col(\"ingest_time\").cast(\"timestamp\"),\n",
+    "        col(\"dt\").cast(\"date\")\n",
+    "    )\n",
+    "    .dropDuplicates([\"unique_key\"])   # 멱등/중복 제거\n",
+    "    .repartition(\"dt\", \"symbol\")      # 파티션/프루닝 효율\n",
     ")\n",
     "\n",
-    "# =========================\n",
-    "# (C) Delta MERGE\n",
-    "# =========================\n",
+    "# =================================\n",
+    "# (C) Delta MERGE (upsert)\n",
+    "#   - 동일 dt 파티션 내 unique_key 기준으로 업서트\n",
+    "# =================================\n",
     "target = DeltaTable.forName(spark, SILVER)\n",
+    "\n",
     "(target.alias(\"t\")\n",
-    "  .merge(silver_df.alias(\"s\"), \"t.unique_key = s.unique_key AND t.dt = s.dt\")\n",
+    "  .merge(\n",
+    "      silver_df.alias(\"s\"),\n",
+    "      \"t.unique_key = s.unique_key AND t.dt = s.dt\"\n",
+    "  )\n",
     "  .whenMatchedUpdateAll()\n",
     "  .whenNotMatchedInsertAll()\n",
-    "  .execute())\n",
+    "  .execute()\n",
+    ")\n",
     "\n",
     "print(f\"Silver transform complete: upserted into {SILVER}\")\n"
    ]
