--- a/pipeline/03c_gold_fear_greed.ipynb
+++ b/pipeline/03c_gold_fear_greed.ipynb
@@ -18,79 +18,67 @@
    },
    "outputs": [],
    "source": [
-    "# Databricks Notebook: Gold Summary for Dashboard Boxes\n",
-    "from pyspark.sql import functions as F\n",
-    "from pyspark.sql.window import Window\n",
+    "# Databricks Notebook: Silver -> Gold (FNG unified one-table)\n",
+    "from pyspark.sql import functions as F, Window\n",
     "\n",
-    "# ========== 설정 ==========\n",
-    "CATALOG  = \"demo_catalog\"\n",
-    "SCHEMA   = \"demo_schema\"\n",
-    "GOLD_15  = f\"{CATALOG}.{SCHEMA}.gold_prices_15m\"\n",
-    "GOLD_4H  = f\"{CATALOG}.{SCHEMA}.gold_prices_4h\"\n",
-    "FNG_SLV  = f\"{CATALOG}.{SCHEMA}.silver_fear_greed\"\n",
-    "SUMMARY  = f\"{CATALOG}.{SCHEMA}.gold_dashboard_summary\"\n",
+    "spark.sql(\"SET spark.sql.session.timeZone=UTC\")\n",
     "\n",
-    "# ========== 요약 테이블 ==========\n",
+    "CATALOG = \"demo_catalog\"\n",
+    "SCHEMA  = \"demo_schema\"\n",
+    "SILVER  = f\"{CATALOG}.{SCHEMA}.silver_fear_greed\"\n",
+    "GOLD    = f\"{CATALOG}.{SCHEMA}.gold_fear_greed\"   # 단일 Gold\n",
+    "\n",
     "spark.sql(f\"\"\"\n",
-    "CREATE TABLE IF NOT EXISTS {SUMMARY} (\n",
-    "  symbol          STRING,\n",
-    "  latest_price    DOUBLE,\n",
-    "  change_24h_pct  DOUBLE,\n",
-    "  cross_signal_4h STRING,\n",
-    "  fgi_value       INT,\n",
-    "  fgi_class       STRING,\n",
-    "  updated_at      TIMESTAMP\n",
+    "CREATE TABLE IF NOT EXISTS {GOLD} (\n",
+    "  ts_utc       TIMESTAMP,   -- event_time\n",
+    "  dt           DATE,\n",
+    "  value        INT,\n",
+    "  value_class  STRING,\n",
+    "  ma7          DOUBLE,\n",
+    "  ma30         DOUBLE,\n",
+    "  z30          DOUBLE,\n",
+    "  d1_change    INT,\n",
+    "  d7_change    INT,\n",
+    "  streak_days  INT          -- 해당 날짜 기준 연속일수\n",
     ") USING DELTA\n",
+    "PARTITIONED BY (dt)\n",
     "\"\"\")\n",
     "\n",
-    "# 최신 15m (심볼별 가장 최근)\n",
-    "g15 = spark.table(GOLD_15).select(\"symbol\",\"open_time\",\"close\",\"pct_change_24h\")\n",
-    "w15 = Window.partitionBy(\"symbol\").orderBy(F.col(\"open_time\").desc())\n",
-    "latest_15 = (\n",
-    "  g15.withColumn(\"rn\", F.row_number().over(w15))\n",
-    "     .where(\"rn = 1\")\n",
-    "     .select(\n",
-    "        F.col(\"symbol\"),\n",
-    "        F.col(\"close\").alias(\"latest_price\"),\n",
-    "        F.col(\"pct_change_24h\").alias(\"change_24h_pct\")\n",
-    "     )\n",
+    "s = (spark.table(SILVER)\n",
+    "        .select(\n",
+    "            F.col(\"event_time\").alias(\"ts_utc\"),\n",
+    "            F.col(\"dt\"),\n",
+    "            F.col(\"index_value\").alias(\"value\"),\n",
+    "            F.col(\"value_classification\").alias(\"value_class\")\n",
+    "        ))\n",
+    "\n",
+    "# 롤링 윈도우(시간 오름차순)\n",
+    "w_asc  = Window.orderBy(\"ts_utc\").rowsBetween(Window.unboundedPreceding, Window.currentRow)\n",
+    "w7     = Window.orderBy(\"ts_utc\").rowsBetween(-6, 0)\n",
+    "w30    = Window.orderBy(\"ts_utc\").rowsBetween(-29, 0)\n",
+    "\n",
+    "g = (s\n",
+    "    # 이동평균 / z-score\n",
+    "    .withColumn(\"ma7\",  F.avg(\"value\").over(w7))\n",
+    "    .withColumn(\"ma30\", F.avg(\"value\").over(w30))\n",
+    "    .withColumn(\"std30\",F.stddev_samp(\"value\").over(w30))\n",
+    "    .withColumn(\"z30\",  F.when(F.col(\"std30\").isNull() | (F.col(\"std30\")==0), F.lit(None).cast(\"double\"))\n",
+    "                         .otherwise((F.col(\"value\")-F.col(\"ma30\"))/F.col(\"std30\")))\n",
+    "    .drop(\"std30\")\n",
+    "    # 변화량(전일/7일 전)\n",
+    "    .withColumn(\"d1_change\", (F.col(\"value\") - F.lag(\"value\", 1).over(Window.orderBy(\"ts_utc\"))).cast(\"int\"))\n",
+    "    .withColumn(\"d7_change\", (F.col(\"value\") - F.lag(\"value\", 7).over(Window.orderBy(\"ts_utc\"))).cast(\"int\"))\n",
+    "    # streak 계산: 동일 등급 지속일수\n",
+    "    .withColumn(\"lag_class\", F.lag(\"value_class\", 1).over(Window.orderBy(\"ts_utc\")))\n",
+    "    .withColumn(\"chg_flag\",  F.when(F.col(\"value_class\")==F.col(\"lag_class\"), F.lit(0)).otherwise(F.lit(1)))\n",
+    "    .withColumn(\"grp\",       F.sum(\"chg_flag\").over(w_asc))\n",
+    "    .withColumn(\"streak_days\", F.row_number().over(Window.partitionBy(\"grp\").orderBy(\"ts_utc\")))\n",
+    "    .select(\"ts_utc\",\"dt\",\"value\",\"value_class\",\"ma7\",\"ma30\",\"z30\",\"d1_change\",\"d7_change\",\"streak_days\")\n",
     ")\n",
     "\n",
-    "# 최신 4h cross\n",
-    "g4 = spark.table(GOLD_4H).select(\"symbol\",\"bucket_start\",\"cross_signal\")\n",
-    "w4 = Window.partitionBy(\"symbol\").orderBy(F.col(\"bucket_start\").desc())\n",
-    "latest_4h = (\n",
-    "  g4.withColumn(\"rn\", F.row_number().over(w4))\n",
-    "     .where(\"rn = 1\")\n",
-    "     .select(F.col(\"symbol\").alias(\"sym4\"), F.col(\"cross_signal\").alias(\"cross_signal_4h\"))\n",
-    ")\n",
-    "\n",
-    "# 최신 F&G (전역 지표이므로 전체 중 1행만 최신)\n",
-    "fng = spark.table(FNG_SLV).select(\"event_time\",\"index_value\",\"value_classification\")\n",
-    "fng_latest = (\n",
-    "  fng.orderBy(F.col(\"event_time\").desc()).limit(1)\n",
-    "     .withColumnRenamed(\"index_value\",\"fgi_value\")\n",
-    "     .withColumnRenamed(\"value_classification\",\"fgi_class\")\n",
-    "     .withColumn(\"dummy\", F.lit(1))\n",
-    ")\n",
-    "\n",
-    "# 심볼 목록에 F&G 최신(1행)을 cross join 해서 모두에 부여\n",
-    "symbols_df = latest_15.select(\"symbol\").distinct().withColumn(\"dummy\", F.lit(1))\n",
-    "summary_df = (\n",
-    "  latest_15\n",
-    "    .join(latest_4h, latest_15.symbol == latest_4h.sym4, \"left\")\n",
-    "    .drop(\"sym4\")\n",
-    "    .join(symbols_df, \"symbol\", \"left\")\n",
-    "    .join(fng_latest, \"dummy\", \"left\")\n",
-    "    .drop(\"dummy\")\n",
-    "    .withColumn(\"updated_at\", F.current_timestamp())\n",
-    "    .select(\"symbol\",\"latest_price\",\"change_24h_pct\",\"cross_signal_4h\",\"fgi_value\",\"fgi_class\",\"updated_at\")\n",
-    ")\n",
-    "\n",
-    "# 간단히 덮어쓰기(요약이라 전체 새로 고침이 편함)\n",
-    "summary_df.write.mode(\"overwrite\").saveAsTable(SUMMARY)\n",
-    "\n",
-    "print(f\"[SUMMARY] refreshed: {SUMMARY}\")\n"
+    "# 단일 Gold 갱신(전체 덮어쓰기)\n",
+    "g.write.mode(\"overwrite\").option(\"mergeSchema\",\"true\").saveAsTable(GOLD)\n",
+    "print(f\"[FNG GOLD] refreshed -> {GOLD}\")\n"
    ]
   }
  ],
