--- a/pipeline/03b_gold_binance_leaderboard.ipynb
+++ b/pipeline/03b_gold_binance_leaderboard.ipynb
@@ -82,7 +82,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "03c_gold_leaderboard",
+   "notebookName": "03b_gold_binance_leaderboard",
    "widgets": {}
   },
   "language_info": {
